--- a/ui/addstorage.ui
+++ b/ui/addstorage.ui
@@ -79,6 +79,7 @@
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">_GiB</property>
                         <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">config-storage-size</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
