--- a/ui/gfxdetails.ui
+++ b/ui/gfxdetails.ui
@@ -105,7 +105,7 @@
         <property name="xalign">1</property>
         <property name="label" translatable="yes">Pa_ssword:</property>
         <property name="use_underline">True</property>
-        <property name="mnemonic_widget">graphics-password</property>
+        <property name="mnemonic_widget">graphics-password-chk</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -119,6 +119,7 @@
         <property name="xalign">1</property>
         <property name="label" translatable="yes">_Port:</property>
         <property name="use_underline">True</property>
+        <property name="mnemonic_widget">graphics-port-auto</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -136,8 +137,9 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">1</property>
-            <property name="label" translatable="yes">_TLS port:</property>
+            <property name="label" translatable="yes">T_LS port:</property>
             <property name="use_underline">True</property>
+            <property name="mnemonic_widget">graphics-tlsport-auto</property>
           </object>
         </child>
       </object>
