--- a/ui/netlist.ui
+++ b/ui/netlist.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.8"/>
   <object class="GtkGrid" id="net-source-box">
@@ -21,8 +21,6 @@
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">1</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -39,8 +37,6 @@
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">2</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -54,8 +50,6 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">1</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -98,7 +92,6 @@
         <property name="left_attach">0</property>
         <property name="top_attach">4</property>
         <property name="width">2</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -118,8 +111,6 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">2</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -158,7 +149,6 @@
         <property name="left_attach">0</property>
         <property name="top_attach">0</property>
         <property name="width">2</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -175,8 +165,6 @@
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">3</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -196,8 +184,6 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">3</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
   </object>
@@ -209,6 +195,7 @@
     <property name="ypad">3</property>
     <property name="label" translatable="yes">_Network source:</property>
     <property name="use_underline">True</property>
+    <property name="mnemonic_widget">net-source</property>
   </object>
   <object class="GtkExpander" id="vport-expander">
     <property name="can_focus">True</property>
@@ -247,8 +234,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">1</property>
-                <property name="label" translatable="yes">Instance id:</property>
+                <property name="label" translatable="yes">Ins_tance id:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">vport-instanceid</property>
               </object>
               <packing>
                 <property name="top_attach">4</property>
@@ -279,8 +267,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">1</property>
-                <property name="label" translatable="yes">Typeid version:</property>
+                <property name="label" translatable="yes">Typ_eid version:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">vport-typeidversion</property>
               </object>
               <packing>
                 <property name="top_attach">3</property>
@@ -311,8 +300,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">1</property>
-                <property name="label" translatable="yes">Typeid:</property>
+                <property name="label" translatable="yes">T_ypeid:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">vport-typeid</property>
               </object>
               <packing>
                 <property name="top_attach">2</property>
@@ -343,8 +333,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">1</property>
-                <property name="label" translatable="yes">Managerid:</property>
+                <property name="label" translatable="yes">M_anagerid:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">vport-managerid</property>
               </object>
               <packing>
                 <property name="top_attach">1</property>
@@ -359,9 +350,10 @@
                 <property name="can_focus">False</property>
                 <property name="xalign">1</property>
                 <property name="yalign">0.47999998927116394</property>
-                <property name="label" translatable="yes">Type:</property>
+                <property name="label" translatable="yes">_Type:</property>
                 <property name="use_markup">True</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">vport-type</property>
               </object>
               <packing>
                 <property name="x_options">GTK_FILL</property>
@@ -396,8 +388,9 @@
       <object class="GtkLabel" id="label8">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Virtual port</property>
+        <property name="label" translatable="yes">Virtual _port</property>
         <property name="use_markup">True</property>
+        <property name="use_underline">True</property>
       </object>
     </child>
   </object>
