--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5602,8 +5602,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">T_ype:</property>
-                                            <property name="use_underline">True</property>
+                                            <property name="label" translatable="yes">Type:</property>
                                           </object>
                                           <packing>
                                             <property name="left_attach">0</property>
