--- a/ui/details.ui
+++ b/ui/details.ui
@@ -3709,22 +3709,6 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                     <property name="row_spacing">3</property>
                                                     <property name="column_spacing">8</property>
                                                     <child>
-                                                      <object class="GtkLabel" id="label30">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="xalign">1</property>
-                                                        <property name="yalign">0</property>
-                                                        <property name="ypad">4</property>
-                                                        <property name="label" translatable="yes">Storage forma_t:</property>
-                                                        <property name="use_underline">True</property>
-                                                        <property name="mnemonic_widget">storage-format-combobox-entry</property>
-                                                      </object>
-                                                      <packing>
-                                                        <property name="left_attach">0</property>
-                                                        <property name="top_attach">2</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
                                                       <object class="GtkLabel" id="label32">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
@@ -3844,6 +3828,53 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                             <property name="fill">True</property>
                                                             <property name="position">1</property>
                                                           </packing>
+                                                        </child>
+                                                      </object>
+                                                      <packing>
+                                                        <property name="left_attach">1</property>
+                                                        <property name="top_attach">3</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <object class="GtkLabel" id="label30">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <property name="xalign">1</property>
+                                                        <property name="yalign">0</property>
+                                                        <property name="ypad">4</property>
+                                                        <property name="label" translatable="yes">Storage forma_t:</property>
+                                                        <property name="use_underline">True</property>
+                                                        <property name="mnemonic_widget">storage-format-combobox-entry</property>
+                                                      </object>
+                                                      <packing>
+                                                        <property name="left_attach">0</property>
+                                                        <property name="top_attach">3</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <object class="GtkLabel" id="label66">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <property name="xalign">1</property>
+                                                        <property name="label" translatable="yes">_SGIO:</property>
+                                                        <property name="use_underline">True</property>
+                                                        <property name="mnemonic_widget">disk-sgio-entry</property>
+                                                      </object>
+                                                      <packing>
+                                                        <property name="left_attach">0</property>
+                                                        <property name="top_attach">2</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <object class="GtkComboBox" id="disk-sgio">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <property name="has_entry">True</property>
+                                                        <child internal-child="entry">
+                                                          <object class="GtkEntry" id="disk-sgio-entry">
+                                                            <property name="can_focus">True</property>
+                                                            <signal name="changed" handler="on_disk_sgio_entry_changed" swapped="no"/>
+                                                          </object>
                                                         </child>
                                                       </object>
                                                       <packing>
